RESOLVED FIXED 59284
[V8] Nodes in shadow DOM should not be GCed while their hosts are alive
https://bugs.webkit.org/show_bug.cgi?id=59284
Summary [V8] Nodes in shadow DOM should not be GCed while their hosts are alive
Dominic Cooney
Reported 2011-04-23 15:28:58 PDT
The lifetime of nodes in shadow DOM and their hosts should be linked, since event listeners and JavaScript properties set up on one should not disappear (via the wrapper being prematurely garbage collected) while the other is alive.
Attachments
Patch (5.87 KB, patch)
2011-04-23 15:53 PDT, Dominic Cooney
no flags
Dominic Cooney
Comment 1 2011-04-23 15:53:50 PDT
Dimitri Glazkov (Google)
Comment 2 2011-04-23 16:35:12 PDT
Comment on attachment 90863 [details] Patch awesome!
Hajime Morrita
Comment 3 2011-04-23 18:31:29 PDT
Comment on attachment 90863 [details] Patch Clearing flags on attachment: 90863 Committed r84749: <http://trac.webkit.org/changeset/84749>
Hajime Morrita
Comment 4 2011-04-23 18:31:33 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.