2011-04-23  Dominic Cooney  <dominicc@chromium.org>

Reviewed by Dimitri Glazkov.

        [V8] Nodes in shadow DOM should not be GCed while their hosts are alive
        https://bugs.webkit.org/show_bug.cgi?id=59284

        * fast/dom/shadow/gc-shadow-expected.txt: Added.
        * fast/dom/shadow/gc-shadow.html: Added.
2011-04-23  Dominic Cooney  <dominicc@chromium.org>

        Reviewed by Dimitri Glazkov.

        [V8] Nodes in shadow DOM should not be GCed while their hosts are alive
        https://bugs.webkit.org/show_bug.cgi?id=59284

        Test: fast/dom/shadow/gc-shadow.html

        * bindings/v8/V8GCController.cpp:
        (WebCore::calculateGroupId): group shadow nodes with their hosts
2011-04-23  Dominic Cooney  <dominicc@chromium.org>

        Reviewed by Dimitri Glazkov.

        [V8] Nodes in shadow DOM should not be GCed while their hosts are alive
        https://bugs.webkit.org/show_bug.cgi?id=59284

        Chromium DRT over-refcounted the NPObject wrappers it used to
        marshal shadowRoot nodes back to tests (WebBindings::makeNode
        births NPObjects with referenceCount == 1). This masked the GC bug
        59284 in tests by making shadowRoot nodes live forever.

        * DumpRenderTree/chromium/LayoutTestController.cpp:
        (LayoutTestController::shadowRoot):
        (LayoutTestController::ensureShadowRoot):

Canonical link: https://commits.webkit.org/74478@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84749 268f45cc-cd09-0410-ab3c-d52691b4dbfc